--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -22,7 +22,7 @@
                 <div class="py-1">
                   <%= link_to 'Tickets', tickets_path, class: 'text-gray-700 block px-4 py-2 text-sm hover:bg-gray-100' %>
                   <%= link_to 'Productos', products_path, class: 'text-gray-700 block px-4 py-2 text-sm hover:bg-gray-100' %>
-                  <%= link_to 'Equipos', teams_path, class: 'text-gray-700 block px-4 py-2 text-sm hover:bg-gray-100' %>
+                  <%= link_to 'Equipos de Trabajo', teams_path, class: 'text-gray-700 block px-4 py-2 text-sm hover:bg-gray-100' %>
                   <%= link_to 'Tipos de Servicio', service_types_path, class: 'text-gray-700 block px-4 py-2 text-sm hover:bg-gray-100' %>
                   <%= link_to 'Ubicaciones', locations_path, class: 'text-gray-700 block px-4 py-2 text-sm hover:bg-gray-100' %>
                   <%= link_to 'Grupos de Ubicaciones', location_groups_path, class: 'text-gray-700 block px-4 py-2 text-sm hover:bg-gray-100' %>
