--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -11,14 +11,18 @@
     
     <% if current_user&.admin? %>
       <span class="block mt-8 px-6 text-xs font-semibold text-gray-400 uppercase">Administración</span>
+      <%= link_to 'Usuarios', admin_users_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
      
       <%= link_to 'Productos', products_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
-      <%= link_to 'Equipos', teams_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
+      <%= link_to 'Equipos de Trabajo', teams_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
       <%= link_to 'Tipos de Servicio', service_types_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
       <%= link_to 'Grupos de Ubicaciones', location_groups_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
       <%= link_to 'Ubicaciones', locations_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
       <%= link_to 'Miembros Equipos', team_memberships_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
       <%= link_to 'Tickets', tickets_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
+     <% else %>
+     <%= link_to 'Tickets', tickets_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
+
     <% end %>
   </nav>
 </div>
