--- a/app/views/team_memberships/_team_membership.html.erb
+++ b/app/views/team_memberships/_team_membership.html.erb
@@ -1,10 +1,11 @@
 <div id="<%= dom_id team_membership %>" class="w-full sm:w-auto my-5 space-y-5">
   <div>
-    <strong class="block font-medium mb-1">Team:</strong>
+    <strong class="block font-medium mb-1">Equipo:</strong>
     <%= team_membership.team_id %>
   </div>
+
   <div>
-    <strong class="block font-medium mb-1">User:</strong>
+    <strong class="block font-medium mb-1">Agente:</strong>
     <%= team_membership.user_id %>
   </div>
 </div>
