--- a/app/views/team_memberships/index.html.erb
+++ b/app/views/team_memberships/index.html.erb
@@ -9,10 +9,10 @@
 
     <tr class="hover:bg-gray-50 transition-colors duration-200">
       <td class="px-6 py-4 whitespace-nowrap">
-        <div class="text-sm font-semibold text-indigo-600"><%= team_membership.user.name %></div>
+        <div class="text-sm text-gray-800"><%= team_membership.user.name %></div>
       </td>
       <td class="px-6 py-4 whitespace-nowrap">
-        <div class="text-sm text-gray-800"><%= team_membership.team.name %></div>
+        <div class="text-sm text-gray-800"><%= team_membership.team.description %></div>
       </td>
   
       <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
