--- a/app/views/ticket_comments/_form.html.erb
+++ b/app/views/ticket_comments/_form.html.erb
@@ -1,32 +1,9 @@
-<%= form_with(model: ticket_comment, class: "contents") do |form| %>
-  <% if ticket_comment.errors.any? %>
-    <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-md mt-3">
-      <h2><%= pluralize(ticket_comment.errors.count, "error") %> prohibited this ticket_comment from being saved:</h2>
-
-      <ul class="list-disc ml-6">
-        <% ticket_comment.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="my-5">
-    <%= form.label :description %>
-    <%= form.text_area :description, rows: 4, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": ticket_comment.errors[:description].none?, "border-red-400 focus:outline-red-600": ticket_comment.errors[:description].any?}] %>
+<%= form_with(model: [ticket, ticket_comment], id: dom_id(ticket, "new_comment")) do |form| %>
+  <div>
+    <%= form.label :description, "Escribe tu comentario", class: "sr-only" %>
+    <%= form.text_area :description, rows: 4, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6", placeholder: "Añade tu comentario..." %>
   </div>
-
-  <div class="my-5">
-    <%= form.label :ticket_id %>
-    <%= form.text_field :ticket_id, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": ticket_comment.errors[:ticket_id].none?, "border-red-400 focus:outline-red-600": ticket_comment.errors[:ticket_id].any?}] %>
-  </div>
-
-  <div class="my-5">
-    <%= form.label :user_id %>
-    <%= form.text_field :user_id, class: ["block shadow-sm rounded-md border px-3 py-2 mt-2 w-full", {"border-gray-400 focus:outline-blue-600": ticket_comment.errors[:user_id].none?, "border-red-400 focus:outline-red-600": ticket_comment.errors[:user_id].any?}] %>
-  </div>
-
-  <div class="inline">
-    <%= form.submit class: "w-full sm:w-auto rounded-md px-3.5 py-2.5 bg-blue-600 hover:bg-blue-500 text-white inline-block font-medium cursor-pointer" %>
+  <div class="mt-3 flex justify-end">
+    <%= form.submit "Publicar Comentario", class: "rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 cursor-pointer" %>
   </div>
 <% end %>
