--- a/app/views/ticket_comments/_ticket_comment.html.erb
+++ b/app/views/ticket_comments/_ticket_comment.html.erb
@@ -1,14 +1,18 @@
-<div id="<%= dom_id ticket_comment %>" class="w-full sm:w-auto my-5 space-y-5">
-  <div>
-    <strong class="block font-medium mb-1">Description:</strong>
-    <%= ticket_comment.description %>
+<div id="<%= dom_id(ticket_comment) %>" class="flex items-start space-x-4 py-4">
+  <div class="flex-shrink-0">
+    <span class="inline-flex h-10 w-10 items-center justify-center rounded-full bg-gray-500">
+      <span class="font-medium leading-none text-white"><%= ticket_comment.user.name.first.upcase %></span>
+    </span>
   </div>
-  <div>
-    <strong class="block font-medium mb-1">Ticket:</strong>
-    <%= ticket_comment.ticket_id %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">User:</strong>
-    <%= ticket_comment.user_id %>
+  <div class="min-w-0 flex-1">
+    <p class="text-sm font-medium text-gray-900">
+      <%= ticket_comment.user.name %>
+    </p>
+    <div class="mt-2 text-sm text-gray-700 prose max-w-none">
+      <p><%= ticket_comment.description %></p>
+    </div>
+    <p class="mt-2 text-xs text-gray-500">
+      <time datetime="<%= ticket_comment.created_at.to_fs(:iso8601) %>"><%= time_ago_in_words(ticket_comment.created_at) %> ago</time>
+    </p>
   </div>
 </div>
