--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -2,12 +2,12 @@
 <div data-sidebar-target="sidebar" class="fixed inset-y-0 left-0 z-30 w-64 bg-gray-900 text-gray-200 transform -translate-x-full transition-transform duration-300 ease-in-out md:relative md:translate-x-0">
   <!-- Logo -->
   <div class="flex items-center justify-center mt-8">
-    <%= link_to 'Helpdesk', root_path, class: "text-white text-2xl font-bold" %>
+    <%= link_to 'Helpdesk', authenticated_root_path, class: "text-white text-2xl font-bold" %>
   </div>
 
   <!-- Vínculos de Navegación -->
   <nav class="mt-10">
-    <%= link_to 'Dashboard', root_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
+    <%= link_to 'Dashboard', authenticated_root_path, class: 'flex items-center mt-4 py-2 px-6 text-gray-300 hover:bg-gray-700 hover:text-white' %>
     
     <% if current_user&.admin? %>
       <span class="block mt-8 px-6 text-xs font-semibold text-gray-400 uppercase">Administración</span>
