--- a/app/views/ticket_mailer/new_comment_notification.html.erb
+++ b/app/views/ticket_mailer/new_comment_notification.html.erb
@@ -23,8 +23,8 @@
     </div>
 
     <p>Puedes ver la conversación completa y responder haciendo clic en el siguiente botón:</p>
-    <%= link_to 'Ver Ticket', ticket_url(@ticket), class: 'button' %>
-    
+    <%= link_to 'Revisar y Responder', "http://186.1.16.233/ticket/#{@ticket.id}", class: 'button' %>
+     
     <p style="margin-top: 25px; font-size: 14px; color: #718096;">
       Gracias,<br>El equipo de soporte.
     </p>
