--- a/app/views/ticket_mailer/status_update_notification.html.erb
+++ b/app/views/ticket_mailer/status_update_notification.html.erb
@@ -21,8 +21,8 @@
       <span class="status-badge"><%= @ticket.status.description %></span>
     </p>
     <p>Puedes ver los detalles completos del ticket haciendo clic en el siguiente botón:</p>
-    <%= link_to 'Ver Ticket', ticket_url(@ticket), class: 'button' %>
-    <p>Gracias,<br>El equipo de soporte.</p>
+    <%= link_to 'Ver Ticket', "http://186.1.16.233/ticket/#{@ticket.id}", class: 'button' %>
+      <p>Gracias,<br>El equipo de soporte.</p>
   </div>
 </body>
 </html>
