fix email templates

--- a/app/views/ticket_mailer/billing_notification.html.erb
+++ b/app/views/ticket_mailer/billing_notification.html.erb
@@ -28,7 +28,7 @@
 
     <div class="action-prompt">
       <p><strong>Siguiente Paso:</strong> Por favor, revisa la cotización. Deberás aprobarla para que podamos proceder con el servicio y posterior pago.</p>
-      <%= link_to 'Revisar y Responder', "http://186.1.16.233/ticket/#{@ticket.id}", class: 'button' %>
+      <%= link_to 'Revisar y Responder', "http://186.1.16.233/tickets/#{@ticket.id}", class: 'button' %>
     </div>
     
     <p style="margin-top: 25px; font-size: 14px; color: #718096;">
