--- a/app/views/ticket_mailer/new_ticket_notification_to_boss.html.erb
+++ b/app/views/ticket_mailer/new_ticket_notification_to_boss.html.erb
@@ -38,7 +38,7 @@
     </div>
 
     <p>Por favor, asigna este ticket a un agente de tu equipo para su pronta atención.</p>
-      <%= link_to 'Ver Y Asignar', "http://186.1.16.233/ticket/#{@ticket.id}", class: 'button' %>
+      <%= link_to 'Ver Y Asignar', "http://186.1.16.233/tickets/#{@ticket.id}", class: 'button' %>
     
     <p style="margin-top: 25px; font-size: 14px; color: #718096;">
       Sistema de Helpdesk.
