--- a/app/views/ticket_mailer/new_ticket_notification_to_customer.html.erb
+++ b/app/views/ticket_mailer/new_ticket_notification_to_customer.html.erb
@@ -22,7 +22,7 @@
     </div>
 
     <p>Puedes seguir el estado de tu solicitud y ver todos los detalles haciendo clic en el siguiente botón:</p>
-     <%= link_to 'Ver mi Ticket', "http://186.1.16.233/ticket/#{@ticket.id}", class: 'button' %>
+     <%= link_to 'Ver mi Ticket', "http://186.1.16.233/tickets/#{@ticket.id}", class: 'button' %>
     
     <p style="margin-top: 25px; font-size: 14px; color: #718096;">
       Gracias por tu confianza,<br>El equipo de soporte.
