--- a/app/views/ticket_mailer/agent_assignment_notification.html.erb
+++ b/app/views/ticket_mailer/agent_assignment_notification.html.erb
@@ -51,7 +51,7 @@
     </div>
 
     <p>Por favor, revisa todos los detalles en la plataforma.</p>
-    <%= link_to 'Revisar y Responder', "http://186.1.16.233/ticket/#{@ticket.id}", class: 'button' %>
+    <%= link_to 'Revisar y Responder', "http://186.1.16.233/tickets/#{@ticket.id}", class: 'button' %>
       
     <p style="margin-top: 25px; font-size: 14px; color: #718096;">
       Gracias,<br>Sistema de Helpdesk.
